fix(ui): Promotion confirmation message overflowed freight box (#2015)

--- a/ui/src/features/freightline/freightline.module.less
+++ b/ui/src/features/freightline/freightline.module.less
@@ -24,7 +24,7 @@
 }
 
 .confirming {
-  @apply w-52 bg-sky-100 border-sky-400 hover:border-sky-400;
+  @apply w-60 bg-sky-100 border-sky-400 hover:border-sky-400;
 }
 
 .selected {
